tests/transpiler/x/java/record_assign.error
exit status 1
Main.java:2: error: cannot find symbol
    static Counter c = new Counter(0);
           ^
  symbol:   class Counter
  location: class Main
Main.java:4: error: cannot find symbol
    static void inc(Counter c) {
                    ^
  symbol:   class Counter
  location: class Main
Main.java:2: error: cannot find symbol
    static Counter c = new Counter(0);
                           ^
  symbol:   class Counter
  location: class Main
Main.java:5: error: incompatible types: String cannot be converted to int
c["n"] = c.n + 1;
  ^
4 errors
